# miniqbot

./: .cursorrules  .gitignore  AGENTS.md  CLAUDE.md  README.md  henki_ros2_best_practices.md
.github/: copilot-instructions.md
Enigma_spot/: move_dynamixel  test_dynamixel
Enigma_spot/src/: move_dynamixel.cpp  read_write_node.cpp  test_dynamixel.cpp
Enigma_spot/src/vision_robot/: package.xml  prueba_camara_1.py  setup.py
Enigma_spot/src/vision_robot/vision_robot/: detector_obstaculos.py
camera/: detector_obstaculos_sonido.py
docs/: ros2_tutorial.md
src/dynamixel_control_cpp/: CMakeLists.txt  README.md  package.xml
src/dynamixel_control_cpp/config/: demo_node.yaml  dynamixel_node.yaml  monitor_node.yaml
src/dynamixel_control_cpp/include/dynamixel_control_cpp/: ax12_model.hpp  demo_motion.hpp  monitor_display.hpp
src/dynamixel_control_cpp/launch/: dynamixel_stack.xml
src/dynamixel_control_cpp/src/: demo_ax12.cpp  demo_node.cpp  dynamixel_node.cpp  monitor.cpp  monitor_node.cpp  publisher.cpp  subscriber.cpp
src/dynamixel_control_cpp/test/: test_ax12_model.cpp
